<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">OneKey</string>
  <string name="generate">Generate</string>
  <string name="settings">Settings</string>
  <string name="close">Close</string>
  <string name="master_key">MasterKey:</string>
  <string name="master_key_load">(Load)</string>
  <string name="master_key_store">(Store)</string>
  <string name="site_key">SiteKey:</string>
  <string name="site_full">(%1$s)</string>
  <string name="length">Length:</string>
  <string name="password">Password for you:</string>
  <string name="hint_master">(Your master password)</string>
  <string name="hint_master_loaded">(Loaded MasterKey)</string>
  <string name="hint_site">(e.g. \"google\", \"facebook\")</string>
  <string name="hint_password">
    (Click \"Generate\" to get your password)
  </string>
  <string name="ticker">Click to generate password</string>
  <string name="chrome_toast">
    Looks like you are using Chrome.
    Try share the URL to OneKey to get your SiteKey prefilled.
  </string>
  <string name="clip_toast">Generated password copied to clipboard.</string>
  <string name="clear_clip_toast">Clipboard cleared.</string>
  <string name="title_settings">OneKey Settings</string>
  <string name="empty_master_toast">Your MasterKey is empty.</string>
  <string name="title_never">Never Remember</string>
  <string name="never_list_hint">
    These are the sites/packages you chose to never remember the pairing,
    click to remove:
  </string>
  <string name="title_pairing">Remembered Pairings</string>
  <string name="pairing_list_hint">
    These are the remembered pairings from sites/packages to SiteKeys,
    click to remove:
  </string>
  <string name="dialog_title">Confirm</string>
  <string name="dialog_text_never">
    Are you sure you want to remove the site/package \"%1$s\" from
    never remember list?
  </string>
  <string name="dialog_text_pairing">
    Are you sure you want to remove the pairing from site/package \"%1$s\"?
  </string>
  <string name="toast_text_template">%1$s: %2$s</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>

  <!-- Save pairing dialogs -->
  <string name="title_remember">Remember this pairing?</string>
  <string name="msg_remember">
    "Do you want to always prefill \"%3$s\" from \"%2$s\"?"
    "\n"
    "\nClick \"%1$s\" to never remember on \"%2$s\"."
  </string>
  <string name="title_delete">Delete this pairing?</string>
  <string name="msg_delete">
    "Currently we remembered SiteKey \"%3$s\" from \"%2$s\","
    "\ndo you want to delete this pairing?"
    "\n"
    "\nClick \"%1$s\" to never remember on \"%2$s\"."
  </string>
  <string name="title_update">Update this pairing?</string>
  <string name="msg_update">
    "Currently we remembered SiteKey \"%3$s\" from \"%2$s\","
    "\ndo you want to update this pairing to \"%4$s\"?"
    "\n"
    "\nClick \"%1$s\" to never remember on \"%2$s\"."
  </string>
  <string name="button_never">Never</string>

  <!-- Biometric -->
  <string name="biometric_unsupported">
    This device does not support necessary biometric features or is not locked.
  </string>
  <string name="biometric_unset">
    You did not setup any biometric security on this device.
  </string>
  <string name="biometric_invalid">
    The stored key was invalidated because of biometric changes on this device.
    Please store a new MasterKey.
  </string>
  <string name="store_title">Store MasterKey</string>
  <string name="store_succeed">Successfully stored your MasterKey.</string>
  <string name="store_canceled">Successfully stored your MasterKey.</string>
  <string name="load_title">Load MasterKey</string>
  <string name="load_succeed">Successfully loaded your MasterKey.</string>
  <string name="load_empty">You do not have a MasterKey stored.</string>
  <string name="load_empty_or_canceled">
    You do not have a MasterKey stored, or biometric process was canceled.
  </string>

  <!-- Notification channel -->
  <string name="channel_name">Quick access</string>
  <string name="channel_desc">
    The notification for quick access to OneKey app.
  </string>

  <!-- Preference tags -->
  <string name="pref_tag_bio">pref_bio</string>
  <string name="pref_tag_prefill">pref_prefill</string>
  <string name="pref_tag_remember">pref_remember</string>
  <string name="pref_tag_clipboard">pref_clipboard</string>
  <string name="pref_tag_lengths">pref_lengths</string>
  <string name="pref_tag_service">pref_service</string>
  <string name="pref_tag_about">pref_about</string>

  <!-- Preference headers -->
  <string name="pref_header_bio">Biometric Encryption</string>
  <string name="pref_header_prefill">Prefill SiteKey</string>
  <string name="pref_header_remember">Remember SiteKey</string>
  <string name="pref_header_clipboard">Clipboard</string>
  <string name="pref_header_lengths">Password Lengths</string>
  <string name="pref_header_service">Show Notification</string>
  <string name="pref_header_about">About</string>
  <string name="pref_header_about_summary">OneKey v1.5.1</string>

  <!-- Bio preference -->
  <string name="pref_title_bio_autoload">Load MasterKey on start-up.</string>
  <string name="pref_desc_bio_autoload">
    Try to auto load stored MasterKey on app start-up.
  </string>
  <string name="pref_title_bio_invalidate">
    Invalidate by Biometric Enrollment
  </string>
  <string name="pref_desc_bio_invalidate">
    "Invalidate the stored MasterKey when new biometric (fingerprint) is"
    "enrolled on this device."
    "\nNote that this option does not affect already stored MasterKey."
  </string>

  <!-- Prefill preference -->
  <string name="pref_title_usage">From current app</string>
  <string name="pref_desc_usage_yes">
    Try to prefill the sitekey from the package name of the last running app.
    This is just a best guess, please use with caution.
  </string>
  <string name="pref_desc_usage_no">
    Only prefill the sitekey when sharing URL to OneKey.
  </string>
  <string name="pref_title_permission_usage">
    Grant OneKey permission
  </string>
  <string name="pref_desc_permission_usage">
    Click here to go to Usage Access System Settings.
    OneKey needs this permission in order to prefill sitekey from current app.
  </string>
  <string name="pref_desc_prefill_share">
    "ProTip: You can always just share the URL from browser to OneKey to"
    "get sitekey prefilled from the URL."
  </string>

  <!-- Remember preference -->
  <string name="pref_title_remember_prompt">Remember SiteKey</string>
  <string name="pref_desc_remember_prompt">
    When the actual used SiteKey is different from prefilled one,
    prompt to remember the pairing.
  </string>
  <string name="pref_desc_pairing">
    Manage the list of remembered site/package to SiteKey pairings.
  </string>
  <string name="pref_desc_never">
    Manage the list of sites/packages you chose to never remember the SiteKey.
  </string>

  <!-- Clipboard preference -->
  <string name="pref_title_copy_clipboard">Auto clipboard</string>
  <string name="pref_desc_copy_clipboard_yes">
    Copy generated password to clipboard when you click the \"Generate\" button.
  </string>
  <string name="pref_desc_copy_clipboard_no">
    "Do not copy generated password to clipboard"
    "when you click the \"Generate\" button."
  </string>
  <string name="pref_title_clear_time">Time to clear clipboard</string>
  <string-array name="pref_clear_time_titles">
    <item>30 seconds</item>
    <item>1 minute</item>
    <item>5 minutes</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_clear_time_values">
    <item>30</item>
    <item>60</item>
    <item>300</item>
    <item>-1</item>
  </string-array>
  <string name="pref_desc_clipboard_access">
    "NOTE: Before clearing the clipboard,"
    "this app tries to make sure that the clipboard still has the same content first,"
    "to avoid clearing something else you copied to the clipboard."
    "But starting from certain version of Android (likely Q),"
    "when the app is not in foreground, it will be denied clipboard access,"
    "so this check could fail."
    "When the app is unable to perform this safety check,"
    "it will just clear the clipboard blindly."
  </string>

  <!-- Clipboard preference -->
  <string name="pref_title_length1">Length 1</string>
  <string name="pref_title_length2">Length 2</string>
  <string name="pref_title_length3">Length 3</string>
  <string name="pref_title_length4">Length 4</string>
  <string name="pref_desc_length">
    ProTip: You don\'t have to keep them sorted.
  </string>

  <!-- Service preference -->
  <string name="pref_title_service">Show notification</string>
  <string name="pref_desc_service">
    Show a notification to quickly access OneKey.
  </string>
  <string name="pref_desc_service_tip">
    "ProTip: If you are on Nougat or newer,"
    "you can add a QuickTile for quick access to OneKey."
  </string>

  <!-- About screen -->
  <string name="about">OneKey v1.5.1 by Yuxuan \'fishy\' Wang</string>
  <string name="about_github">This is an Open Source project.</string>
  <string name="credits">Credits</string>
  <string name="credit_123_password">
    "This software is inspired by and compatible to 123 Password by tension7 at"
    "https://github.com/tension7/One-Password/."
  </string>
  <string name="credit_icon">
    App icon was originally made by SimpleIcon, used under CC 3.0 BY.
  </string>
</resources>
