<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pref_tag_about"
    >
  <PreferenceCategory
      android:title="@string/pref_header_about"
      >
    <Preference
        android:title="@string/about"
        android:summary="@string/about_github"
        >
      <intent
          android:action="android.intent.action.VIEW"
          android:data="https://github.com/fishy/onepwd"
        />
    </Preference>
  </PreferenceCategory>
  <PreferenceCategory
      android:title="@string/credits"
      >
    <Preference
        android:summary="@string/credit_123_password"
        >
      <intent
          android:action="android.intent.action.VIEW"
          android:data="https://github.com/tension7/One-Password/"
        />
    </Preference>
    <Preference
        android:summary="@string/credit_icon"
        >
      <intent
          android:action="android.intent.action.VIEW"
          android:data="http://www.flaticon.com/authors/simpleicon"
        />
    </Preference>
  </PreferenceCategory>
</PreferenceScreen>
