<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
  <header
      android:fragment="com.yhsif.onepwd.settings.PrefillPreferenceFragment"
      android:title="@string/pref_header_prefill"
    />
  <header
      android:fragment="com.yhsif.onepwd.settings.ClipboardPreferenceFragment"
      android:title="@string/pref_header_clipboard"
    />
  <header
      android:fragment="com.yhsif.onepwd.settings.LengthsPreferenceFragment"
      android:title="@string/pref_header_lengths"
    />
  <header
      android:fragment="com.yhsif.onepwd.settings.ServicePreferenceFragment"
      android:title="@string/pref_header_service"
    />
  <header
      android:fragment="com.yhsif.onepwd.settings.AboutPreferenceFragment"
      android:title="@string/pref_header_about"
      android:summary="@string/pref_header_about_summary"
    />
</preference-headers>
