<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pref_tag_lengths"
    >
  <com.yhsif.onepwd.length.LengthPreference
      android:defaultValue="8"
      android:key="length1"
      android:title="@string/pref_title_length1"
      android:dialogLayout="@layout/length_dialog"
    />
  <com.yhsif.onepwd.length.LengthPreference
      android:defaultValue="10"
      android:key="length2"
      android:title="@string/pref_title_length2"
      android:dialogLayout="@layout/length_dialog"
    />
  <com.yhsif.onepwd.length.LengthPreference
      android:defaultValue="15"
      android:key="length3"
      android:title="@string/pref_title_length3"
      android:dialogLayout="@layout/length_dialog"
    />
  <com.yhsif.onepwd.length.LengthPreference
      android:defaultValue="20"
      android:key="length4"
      android:title="@string/pref_title_length4"
      android:dialogLayout="@layout/length_dialog"
    />
  <Preference
      android:enabled="false"
      android:summary="@string/pref_desc_length"
    />
</androidx.preference.PreferenceScreen>
