<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dp"
	>
	<TextView
		android:text="@string/master_key"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		/>
	<EditText
		android:id="@+id/master_key"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:password="true"
		android:singleLine="true"
		android:hint="@string/hint_master"
		/>
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@android:drawable/divider_horizontal_dark"
		/>
	<TextView
		android:text="@string/site_key"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		/>
	<EditText
		android:id="@+id/site_key"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:singleLine="true"
		android:hint="@string/hint_site"
		/>
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@android:drawable/divider_horizontal_dark"
		/>
	<LinearLayout
		android:id="@+id/length_widget"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:focusable="true"
		android:background="@android:drawable/list_selector_background"
		android:gravity="center_vertical"
		>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			>
			<TextView
				android:text="@string/length"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				/>
			<TextView
				android:id="@+id/length"
				android:text="20"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				/>
		</LinearLayout>
		<ImageView
			android:src="@android:drawable/ic_menu_more"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@android:drawable/divider_horizontal_dark"
		/>
	<TextView
		android:text="@string/password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		>
		<EditText
			android:id="@+id/password"
			android:layout_width="1dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:singleLine="true"
			android:hint="@string/hint_password"
			android:editable="false"
			/>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@android:drawable/divider_horizontal_dark"
		/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="3"
		android:paddingTop="10dp"
		>
		<Button
			android:id="@+id/generate"
			android:text="@string/generate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			/>
		<Button
			android:id="@+id/settings"
			android:text="@string/settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			/>
		<Button
			android:id="@+id/close"
			android:text="@string/close"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			/>
	</LinearLayout>
</LinearLayout>
